Finalize and document Rd contents checking.
git-svn-id: https://svn.r-project.org/R/trunk@51044 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -246,6 +246,10 @@ NEW FEATURES
     o	Renviron.site and Rprofile.site can have architecture-specific
 	versions on systems with sub-architectures.
 
+    o	R CMD check now (by default) also checks Rd files for
+    	auto-generated content in need of editing, and missing argument
+    	descriptions.
+
 
 DEPRECATED & DEFUNCT
 
