Add aggregate formula method. Improve performance of aggregate.data.frame() for sparse contingency tables of the cross-classifying factors.
git-svn-id: https://svn.r-project.org/R/trunk@51052 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -250,6 +250,9 @@ NEW FEATURES
     	auto-generated content in need of editing, and missing argument
     	descriptions.
 
+    o	aggregate() gains a formula method thanks to a contribution by
+    	Arni Magnusson.
+
 
 DEPRECATED & DEFUNCT
 
