conf.level blunder in poisson.test PR#14195
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@51057 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -92,7 +92,11 @@ BUG FIXES
 	when documented to do so.  (Discovered whilst investigating
 	PR#14189.)
 
-    o	match(incomparables=<non-NULL>) could in rare cases infinite-loop.
+    o	match(incomparables=<non-NULL>) could in rare cases
+        infinite-loop.
+
+    o   poisson.test() needed to pass 'conf.level' to binom.test()
+        (PR#14195)
 
 
 
