Update NEWS for path.expand and file.show tweaks
git-svn-id: https://svn.r-project.org/R/trunk@51065 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -253,6 +253,13 @@ NEW FEATURES
     o	aggregate() gains a formula method thanks to a contribution by
     	Arni Magnusson.
 
+    o	path.expand now propagates NA values rather than converting them
+	to "NA".
+
+    o	file.show now disallows NA values for file names, headers, and
+	pager.
+
+
 
 DEPRECATED & DEFUNCT
 
