--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -992,10 +992,10 @@ You need @code{libpng} and @code{jpeg} sources (available, e.g., from
 Working in the directory @file{@var{R_HOME}/src/gnuwin32/bitmap},
 install the @code{libpng} and @code{jpeg} sources in sub-directories.
 The @code{jpeg} sub-directory for version 7 is named @file{jpeg-7}; if
-you use a different version (e.g.@: @file{jpeg-6b}), edit
-@file{src/gnuwin32/MkRules} and change the definition of @code{JPEGDIR}:
-the names of the @file{libpng} and @file{libtiff} directories can also
-be set there.
+you use a different version (e.g.@: @file{jpeg-6b} or @file{jpeg-8}),
+edit @file{src/gnuwin32/MkRules} and change the definition of
+@code{JPEGDIR}: the names of the @file{libpng} and @file{libtiff}
+directories can also be set there.
 
 Example:
 
