--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2378,9 +2378,10 @@ rather similar to the first two
 
 The bitmapped graphics devices @code{jpeg()}, @code{png()} and
 @code{tiff()} need the appropriate headers and libraries installed:
-@code{jpeg} (version 6b or 7) or @code{libpng} (version 1.2.3 or
-later) and @code{zlib} (version 1.1.3 or later) or @code{libtiff} (any
-recent version -- 3.8.2 was tested) respectively.
+@code{jpeg} (version 6b or 7 or 8) or @code{libpng} (version 1.2.3 or
+later, including 1.4.0) and @code{zlib} (version 1.1.3 or later) or
+@code{libtiff} (any recent version of 3.x.y -- 3.8.2 and 3.9.1 have been
+tested) respectively.
 
 If you have them installed (including the appropriate headers and of
 recent enough versions), @code{zlib}, @code{libbz2} and PCRE will be
