updates from Jon Baron
git-svn-id: https://svn.r-project.org/R/trunk@51103 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -264,6 +264,11 @@ NEW FEATURES
 	calculations used in R.  It ensures that the fuzz never comes
 	into play with sequences of integers (wish of PR#14169).
 
+    o	The default value of RSiteSearch(restrict=) has been changed
+	to include vignettes but to exclude R-help.  The R-help
+	archives available have been split, with a new option of
+	"Rhelp10" for those from 2010.
+
 
 DEPRECATED & DEFUNCT
 
