--- a/NEWS
+++ b/NEWS
@@ -451,6 +451,9 @@ BUG FIXES
 	parts of complex numbers correctly (and this was used by str():
 	PR#14201).
 
+    o   system.time() had sys.child component wrong (copied user.child
+        instead) on systems with HAVE_GETRUSAGE (PR#14210)  
+
 
 
 		CHANGES IN R VERSION 2.10.1
