add some coercions and checks of types for Windows progress bars
git-svn-id: https://svn.r-project.org/R/trunk@51119 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -66,6 +66,10 @@ BUG FIXES
     o	system() (and hence shell()) did not set the standard file
     	handles properly, so some programs would not run.
 
+    o	setWinProgressBar() did not check the type of its 'title' and
+	'label' arguments and might have crashed if they were
+	mis-specified.  It now does, thanks to a report by Greg Snow.
+
 
 
 		CHANGES IN R VERSION 2.10.1
