tweaks to extractAIC.coxph() and read.table()
git-svn-id: https://svn.r-project.org/R/trunk@51126 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -269,8 +269,11 @@ NEW FEATURES
 	archives available have been split, with a new option of
 	"Rhelp10" for those from 2010.
 
-    o   New function raster() in 'graphics' package for drawing 
+    o	New function raster() in the 'graphics' package for drawing
         raster images.
+
+    o	stats:::extractAIC.coxph() now omits aliased terms when computing
+	the degrees of freedom (suggestion of Terry Therneau).
 
 
 DEPRECATED & DEFUNCT
