Make aggregate.data.frame() work for summary functions returning arbitrarily many values.
git-svn-id: https://svn.r-project.org/R/trunk@51127 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -251,7 +251,8 @@ NEW FEATURES
     	descriptions.
 
     o	aggregate() gains a formula method thanks to a contribution by
-    	Arni Magnusson.
+    	Arni Magnusson.  The data frame method now allows summary
+    	functions to return arbitrarily many values.
 
     o	path.expand() now propagates NA values rather than converting them
 	to "NA".
