--- a/NEWS
+++ b/NEWS
@@ -461,6 +461,11 @@ BUG FIXES
     o   system.time() had sys.child component wrong (copied user.child
         instead) on systems with HAVE_GETRUSAGE (PR#14210)  
 
+    o	Changing both line texture and line cap (end) resulted in the
+	latter to be ommitted form the PDF code. In additon, line cap
+	(end) and join are now set explicitly in PDF output to ensure
+	correct defaults.
+
 
 
 		CHANGES IN R VERSION 2.10.1
