port r51130 form trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@51131 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -109,6 +109,11 @@ BUG FIXES
 	parts of complex numbers correctly (and this was used by str():
 	PR#14201).
 
+    o	Changing both line texture and line cap (end) resulted in the
+	latter to be ommitted form the PDF code. In additon, line cap
+	(end) and join are now set explicitly in PDF output to ensure
+	correct defaults.
+
 
 
 		CHANGES IN R VERSION 2.10.1
