fix for PR#14208
git-svn-id: https://svn.r-project.org/R/trunk@51136 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -353,6 +353,10 @@ BUG FIXES
 	segfaulted or gave an internal error.
 	(The case cor(B, A) was PR#7116.)
 
+    o	cut.POSIXt() applied to a start value after the DST transition
+	on a DST-change day could give the wrong time for 'breaks' in units
+	of days or longer.  (PR#14208)
+
 
 
 
