do_par UNPROTECT bug, PR#14214
git-svn-id: https://svn.r-project.org/R/trunk@51142 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -357,6 +357,8 @@ BUG FIXES
 	on a DST-change day could give the wrong time for 'breaks' in units
 	of days or longer.  (PR#14208)
 
+    o   do_par() UNPROTECTed too early (PR#14214)
+ 
 
 
 
