missing space in gs command line in [dev2]bitmap
git-svn-id: https://svn.r-project.org/R/trunk@51143 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -480,6 +480,9 @@ BUG FIXES
 	(end) and join are now set explicitly in PDF output to ensure
 	correct defaults.
 
+    o	The suppression of auto-rotation in bitmap() and dev2bitmap()
+	with the 'pdfwrite' device was not working correctly.
+
 
 
 		CHANGES IN R VERSION 2.10.1
